﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1287: Backport fix for missing relation backlink, updated preset.

1285: Bump version numbers to make the play store happy

1283: Fix bug in way reversing, update preset (fix for lane tagging)

1279: Updated imagery, backport changes to imagery id creation.

1267: Updated preset and translations, bump build number.

1265: Updated imagery.

1263: Updated translations and presets, backport C&P and centroid calculation robustness fixes.

1260: Fix for incorrect code, updated translations and presets.

1252: Backport multiple fixes, workaround bing bad max zoom issue, update presets and translations.

1242: Backport JOSM RC improvements from 0.9.9.

1240: Make JOSM RC more robust, other fixes.

1238: Update default preset, imagery and translations, fix regression wrt discarding useless tags, fix various smaller issues.

1228: Update default preset, imagery and translations, fix various smaller issues.

1216: Fix issue with determining the tile storage location on some devices without removable storage.

1214: Update default preset, imagery and translations, fix various smaller bugs.

1211: Update default preset and translations, try to improve debugging for tile cache problems and numerous robustness fixes.

1208: Update default preset and translations.

1206: improve entering of website tags, some UI cleanup, catch weird error when opening tile database on some devices, numerous small bug fixes, updated translations

1205: deselect elements when finishing multi-select mode (regression), protect against SQLiteCantOpenDatabaseException not being caught. Changes for F-Droid.

1204: fix broken default preset, protect against crash if linked preset is missing.

1203: fix more crashes, calculate rough centroid of relations if possible.

1202: update default preset, increase number of lines for very long (German) key descriptions, fix some crashes.
