@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string translatable="false" name="app_name">Vespucci</string>
-    <string translatable="false" name="app_version">0.9.8.1.1287</string>
-    <string translatable="false" name="app_name_version">Vespucci 0.9.8r1287</string>
+    <string translatable="false" name="app_version">0.9.8.1.1291</string>
+    <string translatable="false" name="app_name_version">Vespucci 0.9.8r1291</string>
 </resources>
